[tool.poetry]
name = "My Graphing Calculator"
version = "0.3.0"
description = "https://docs.google.com/document/d/17iAyjZ2iIzpJhnGgHP32L8tCtTVY5b_k/edit?usp=sharing&ouid=115514890429822660017&rtpof=true&sd=true"
authors = ["Michael Chinkov <michael.chinkovAicloud.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
numpy = "^1.22.2"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
jax = "^0.3.13"
tensorflow = "2.9.3"
torch = "1.13.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}
toml = "^0.10.2"
poetry = {url = "https://storage.googleapis.com/poetry-bundles/poetry-1.1.15-py2.py3-none-any.whl"}
urllib3 = "1.26.15"
data-science-types = "0.2.23"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"